outputs/tsp_constructive-constructive/2025-12-21_21-29-06/evaluations/problem_eval8333676868557284302_stdout.txt
Traceback (most recent call last):
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master/problems/tsp_constructive/eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of minimizing immediate travel distance (Nearest Neighbor heuristic, demonstrated by the superior performance of Algorithm 5).
               ^^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master/problems/tsp_constructive/eval.py", line 13, in <module>
    from gpt import select_next_node
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of minimizing immediate travel distance (Nearest Neighbor heuristic, demonstrated by the superior performance of Algorithm 5).
               ^^
SyntaxError: invalid syntax
